--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="service card-img" src="./assets/img/services-01.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">UI/UX design</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Conference</span>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing</p>
                         </div>
                     </div>
