--- a/about.html
+++ b/about.html
@@ -50,9 +50,6 @@ https://templatemo.com/tm-561-purple-buzz
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="work.html">Work</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="pricing.html">Pricing</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -75,7 +72,8 @@ https://templatemo.com/tm-561-purple-buzz
                 <div class="col-lg-6 text-start">
                     <h1 class="h2 py-5 text-primary typo-space-line">About Us</h1>
                     <p class="light-300">
-                        Vector illustration credit goes to <a rel="nofollow" href="http://freepik.com/" target="_blank">FreePik</a> website. Purple Buzz is provided by TemplateMo. Lorem ipsum dolor sit amet, consectetur.
+                         We, from <strong>Algo Clan</strong>, created this website for the virtual Hackathon 'FrostHack 2021' organised by IIT Mandi.<br> 
+                         Our chosen topic is <strong>Event Management</strong>.  
                     </p>
                 </div>
                 <div class="col-lg-6">
@@ -94,8 +92,7 @@ https://templatemo.com/tm-561-purple-buzz
             <div class="col-lg-3">
                 <h2 class="h2 py-5 typo-space-line">Our Team</h2>
                 <p class="text-muted light-300">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Algo Clan is a team of Three, second year BTech students from Indian Institute of Technology, Mandi.
                 </p>
             </div>
 
@@ -103,22 +100,22 @@ https://templatemo.com/tm-561-purple-buzz
                 <div class="team-member col-md-4">
                     <img class="team-member-img img-fluid rounded-circle p-4" src="./assets/img/team-01.jpg" alt="Card image">
                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                        <li>John Doe</li>
-                        <li>Business Development</li>
+                        <li>Sanjana K</li>
+                        <li>Frontend Developer</li>
                     </ul>
                 </div>
                 <div class="team-member col-md-4">
                     <img class="team-member-img img-fluid rounded-circle p-4" src="./assets/img/team-02.jpg" alt="Card image">
                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                        <li>Jane Doe</li>
-                        <li>Media Development</li>
+                        <li>Anooshka Bajaj</li>
+                        <li>Backend Developer</li>
                     </ul>
                 </div>
                 <div class="team-member col-md-4">
                     <img class="team-member-img img-fluid rounded-circle p-4" src="./assets/img/team-03.jpg" alt="Card image">
                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                        <li>Sam</li>
-                        <li>Developer</li>
+                        <li>Shreya Aggarwal</li>
+                        <li>Chatbot Developer</li>
                     </ul>
                 </div>
             </div>
@@ -127,85 +124,6 @@ https://templatemo.com/tm-561-purple-buzz
     </section>
     <!-- End Team Member -->
 
-    <!-- Start Our Partner -->
-    <section class="bg-secondary py-3">
-        <div class="container py-5">
-            <h2 class="h2 text-white text-center py-5">Our Partner</h2>
-            <div class="row text-center">
-                <div class="col-md-3 mb-3">
-                    <div class="card partner-wap py-5">
-                        <a href="#"><i class='display-1 text-white bx bxs-buildings'></i></a>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <div class="card partner-wap py-5">
-                        <a href="#"><i class='display-1 bx text-white bxs-check-shield bx-lg'></i></a>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <div class="card partner-wap py-5">
-                        <a href="#"><i class='display-1 text-white bx bxs-bolt-circle'></i></a>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <div class="card partner-wap py-5">
-                        <a href="#"><i class='display-1 text-white bx bxs-spa'></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--End Our Partner-->
-
-    <!-- Start Progress -->
-    <section class="bg-white py-5">
-        <div class="container my-4">
-
-            <h1 class="creative-heading h2 pb-3">Creative & Make Perfect</h1>
-
-            <div class="creative-content row py-3">
-                <div class="col-md-5">
-                    <p class="text-muted col-lg-8 light-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida Risus.
-                    </p>
-                </div>
-                <div class="creative-progress col-md-7">
-
-                    <div class="row mt-4 mt-sm-2">
-                        <div class="col-6">
-                            <h4 class="h5">Development</h4>
-                        </div>
-                        <div class="col-6 text-right">66%</div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-
-                    <div class="row mt-4 mt-sm-2">
-                        <div class="col-6">
-                            <h4 class="h5">Design</h4>
-                        </div>
-                        <div class="col-6 text-right">90%</div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-
-
-                    <div class="row mt-4 mt-sm-2">
-                        <div class="col-6">
-                            <h4 class="h5">Marketing</h4>
-                        </div>
-                        <div class="col-6 text-right">74%</div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End Progress -->
 
     <!-- Start Choice -->
     <section class="why-us banner-bg bg-light">
@@ -217,7 +135,8 @@ https://templatemo.com/tm-561-purple-buzz
                 <div class="banner-content col-lg-7 align-self-end">
                     <h2 class="h2 pb-3">Why you choose us?</h2>
                     <p class="text-muted pb-5 light-300">
-                    You are allowed to download and use this Purple Buzz template for your websites. You are <strong>not allowed</strong> to re-distribute this template ZIP file on other template websites. It is quite easy to simply copy and repost the ZIP file on any <a rel="nofollow" href="https://www.google.com/search?q=free+css" target="_blank">Free CSS collection</a> websites.</p>
+                    We here at <strong>Effortless Eventz</strong> provide all kinds of services which include Planning and execution of the event, designing and inviting guests (or) participants 
+                    publicising the event and also finding the right partnership and sponsors.</p>
                 </div>
             </div>
         </div>
@@ -235,7 +154,7 @@ https://templatemo.com/tm-561-purple-buzz
                     </div>
                     <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300">Our Vision</h2>
                     <p class="light-300">
-                        Incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse commodo viverra.
+                        We plan to make the task of Organisers easy by Managing their events.
                     </p>
                 </div>
 
@@ -245,8 +164,7 @@ https://templatemo.com/tm-561-purple-buzz
                     </div>
                     <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300">Our Mission</h2>
                     <p class="light-300">
-                        Eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam quis.
+                        Establish a website to carry out the event organisation and managing tasks.
                     </p>
                 </div>
 
@@ -254,10 +172,9 @@ https://templatemo.com/tm-561-purple-buzz
                     <div class="objective-icon card m-auto py-4 mb-2 mb-sm-4 bg-secondary shadow-lg">
                         <i class="display-4 bx bxs-select-multiple text-light"></i>
                     </div>
-                    <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300">Our Goal</h2>
+                    <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300">Our Values</h2>
                     <p class="light-300">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor.
+                        We firmly believe in connecting with people. Our motive is to make any event Remarkable.
                     </p>
                 </div>
 
@@ -277,7 +194,7 @@ https://templatemo.com/tm-561-purple-buzz
                         <input name="email" type="text" class="form-control form-control-lg rounded-pill rounded-end" id="email" placeholder="Your Email" aria-label="Your Email">
                         <button class="btn btn-secondary text-white btn-lg rounded-pill rounded-start px-lg-4" type="submit">Subsribe</button>
                     </div>
-                    <p class="text-center light-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.</p>
+                    <p class="text-center light-300">Get informed of our new developmets, works and your progress. We seek to provide our best services.</p>
                     </form>
                 </div>
             </div>
@@ -297,33 +214,18 @@ https://templatemo.com/tm-561-purple-buzz
                         <span class="text-light h5">Purple</span> <span class="text-light h5 semi-bold-600">Buzz</span>
                     </a>
                     <p class="text-light my-lg-4 my-2">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut.
+                        Follow us on social media!
+                        Links are given below...What are you waiting for?
                     </p>
                     <ul class="list-inline footer-icons light-300">
                         <li class="list-inline-item m-0">
-                            <a class="text-light" target="_blank" href="http://facebook.com/">
+                            <a class="text-light" target="_blank" href="https://www.facebook.com/Effortless-Eventz-106907294899825">
                                 <i class='bx bxl-facebook-square bx-md'></i>
                             </a>
                         </li>
                         <li class="list-inline-item m-0">
-                            <a class="text-light" target="_blank" href="https://www.linkedin.com/">
+                            <a class="text-light" target="_blank" href="https://www.linkedin.com/company/effortless-eventz">
                                 <i class='bx bxl-linkedin-square bx-md'></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item m-0">
-                            <a class="text-light" target="_blank" href="https://www.whatsapp.com/">
-                                <i class='bx bxl-whatsapp-square bx-md'></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item m-0">
-                            <a class="text-light" target="_blank" href="https://www.flickr.com/">
-                                <i class='bx bxl-flickr-square bx-md'></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item m-0">
-                            <a class="text-light" target="_blank" href="https://www.medium.com/">
-                                <i class='bx bxl-medium-square bx-md' ></i>
                             </a>
                         </li>
                     </ul>
@@ -342,9 +244,6 @@ https://templatemo.com/tm-561-purple-buzz
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="work.html">Work</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i></i><a class="text-decoration-none text-light py-1" href="pricing.html">Price</a>
-                            </li>
-                            <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="contact.html">Contact</a>
                             </li>
                         </ul>
@@ -354,22 +253,22 @@ https://templatemo.com/tm-561-purple-buzz
                     <h2 class="h4 pb-lg-3 text-light light-300">Our Works</h2>
                     <ul class="list-unstyled text-light light-300">
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Branding</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Planning</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Business</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Public Relation</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Marketing</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Web Marketing</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Social Media</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Design</a>
                         </li>
                         <li class="pb-2">
                             <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Digital Solution</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Graphic</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Sponsorship</a>
                         </li>
                     </ul>
                 </div>
@@ -381,7 +280,7 @@ https://templatemo.com/tm-561-purple-buzz
                             <i class='bx-fw bx bx-phone bx-xs'></i><a class="text-decoration-none text-light py-1" href="tel:010-020-0340">010-020-0340</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bx-mail-send bx-xs'></i><a class="text-decoration-none text-light py-1" href="mailto:info@company.com">info@company.com</a>
+                            <i class='bx-fw bx bx-mail-send bx-xs'></i><a class="text-decoration-none text-light py-1" href="mailto:effortlesseventz@gmail.com">effortlesseventz@gmail.com</a>
                         </li>
                     </ul>
                 </div>
@@ -394,12 +293,12 @@ https://templatemo.com/tm-561-purple-buzz
                 <div class="row pt-2">
                     <div class="col-lg-6 col-sm-12">
                         <p class="text-lg-start text-center text-light light-300">
-                            © Copyright 2021 Purple Buzz Company. All Rights Reserved.
+                            © Copyright 2021 Effortless Eventz Company. All Rights Reserved.
                         </p>
                     </div>
                     <div class="col-lg-6 col-sm-12">
                         <p class="text-lg-end text-center text-light light-300">
-                            Designed by <a rel="sponsored" class="text-decoration-none text-light" href="https://templatemo.com/" target="_blank"><strong>TemplateMo</strong></a>
+                            Created by <strong>Algo Clan</strong></a>
                         </p>
                     </div>
                 </div>
