--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,7 @@ https://templatemo.com/tm-561-purple-buzz
     <nav id="main_nav" class="navbar navbar-expand-lg navbar-light bg-white shadow">
         <div class="container d-flex justify-content-between align-items-center">
             <a class="navbar-brand h1" href="index.html">
-                <i class='bx bx-buildings bx-sm text-dark'></i>
-                <span class="text-dark h4">Effortless</span> <span class="text-primary h4">Eventz</span>
+            <span class="text-dark h4"><img src="assets/img/apple-icon-small.png" /> Effortless</span> <span class="text-primary h4">Eventz</span>
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler-success" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -208,8 +207,7 @@ https://templatemo.com/tm-561-purple-buzz
 
                 <div class="col-lg-3 col-12 align-left">
                     <a class="navbar-brand" href="index.html">
-                        <i class='bx bx-buildings bx-sm text-light'></i>
-                        <span class="text-light h5">Effortless</span> <span class="text-light h5 semi-bold-600">Eventz</span>
+                        <span class="text-light h5"><img src="assets/img/apple-icon-small.png" /> Effortless</span> <span class="text-light h5 semi-bold-600">Eventz</span>
                     </a>
                     <p class="text-light my-lg-4 my-2">
                         Follow us on social media!
