--- a/work.html
+++ b/work.html
@@ -74,8 +74,8 @@ https://templatemo.com/tm-561-purple-buzz
                     In this section, we will provide some guidelines and tips regarding planning of an event. Scroll down below to discover some amazing stuff you have never known before.
                     Start Planning with us right away!
                 </p>
-                <button type="submit" class="btn rounded-pill btn-outline-light px-4 me-4 light-300">Learn More</button>
-                <button type="submit" class="btn rounded-pill btn-secondary text-light px-4 light-300">Contact Us</button>
+                <button type="submit" class="btn rounded-pill btn-outline-light px-4 me-4 light-300"><a href="#more">Learn More</a></button>
+                <button type="submit" class="btn rounded-pill btn-secondary text-light px-4 light-300"><a href="contact.html">Contact Us</a></button>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@ https://templatemo.com/tm-561-purple-buzz
                 <a class="filter-btn btn rounded-pill btn-outline-primary border-0 m-md-2 px-md-4" data-filter=".sponsor" href="#">Sponsorship</a>
             </div>
         </div>
-
+        <a name="more"></a>
         <div class="row projects gx-lg-5">
             <a href="work-single1.html" class="col-sm-6 col-lg-4 text-decoration-none project">
                 <div class="service-work overflow-hidden card mb-5 mx-5 m-sm-0">
