--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@ https://templatemo.com/tm-561-purple-buzz
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
-                    <a class="nav-link" href="#"><i class='bx bx-bell bx-sm bx-tada-hover text-primary'></i></a>
                     <a class="nav-link" href="#"><i class='bx bx-cog bx-sm text-primary'></i></a>
-                    <a class="nav-link" href="#"><i class='bx bx-user-circle bx-sm text-primary'></i></a>
+                    <a class="nav-link" href="HTMLPage1.html"><i class='bx bx-user-circle bx-sm text-primary'></i></a>
                 </div>
             </div>
         </div>
@@ -85,7 +84,7 @@ https://templatemo.com/tm-561-purple-buzz
                                     <strong> Be a guest... 
                                   <br>At your Own event! </strong>
                               </h1>
-                                <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="#" role="button">Get Started</a>
+                                <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="#Our Features" role="button">Get Started</a>
                             </div>
                         </div>
 
@@ -98,7 +97,7 @@ https://templatemo.com/tm-561-purple-buzz
                                     <strong> Event  Yours. <br>
                                              Management  Ours. </strong>
                                 </h1>
-                                <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="#" role="button">Explore</a>
+                                <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="#Explore" role="button">Explore</a>
                             </div>
                         </div>
 
@@ -110,7 +109,7 @@ https://templatemo.com/tm-561-purple-buzz
                                 <h1 class="banner-heading h1 text-secondary display-3 mb-0 pb-3 mx-0 px-0 light-300">
                                     <strong> YOU deserve the art of Perfection. </strong>
                                 </h1>
-                                <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="#" role="button">Get in touch with Us</a>
+                                <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="contact.html" role="button">Get in touch with Us</a>
                             </div>
                         </div>
 
@@ -180,7 +179,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="service card-img" src="./assets/img/services-01.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Conference</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='conference.html'">Conference</span>
                             <p class="card-text">Formulate your event strategy, invite and delegate.</p>
                         </div>
                     </div>
@@ -193,7 +192,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-02.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Seminars</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='seminars.html'">Seminars</span>
                             <p class="card-text">Create, Address logistical needs, and Advertise.</p>
                         </div>
                     </div>
@@ -206,7 +205,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-03.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Workshop & Training</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick= "window.location='workshop training.html'">Workshop & Training</span>
                             <p class="card-text">Plan your wokshop and decide Target Audience.</p>
                         </div>
                     </div>
@@ -219,7 +218,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-04.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Competitive Events</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick= "window.location='competitive event.html'">Competitive Events</span>
                             <p class="card-text">Build your contest, Be it technical, cultural or sports.</p>
                         </div>
                     </div>
@@ -232,7 +231,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-05.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Birthday Parties</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='birthday.html'">Birthday Parties</span>
                             <p class="card-text">Birthdays are special. Make them memorable and fun.</p>
                         </div>
                     </div>
@@ -245,7 +244,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-06.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Weddings</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='wedding.html'">Weddings</span>
                             <p class="card-text">Choose a theme and mail your Save the dates.</p>
                         </div>
                     </div>
@@ -258,7 +257,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-07.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Festival gatherings</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='festival gathering.html'">Festival gatherings</span>
                             <p class="card-text">Celebrate these joyous occasions with your Friends.</p>
                         </div>
                     </div>
@@ -271,7 +270,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-08.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">College Fests</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='college fests.html'">College Fests</span>
                             <p class="card-text">Easy way to plan, design, publicize and get sponsors.</p>
                         </div>
                     </div>
@@ -284,7 +283,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-09.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Charity participatory events</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='charity.html'">Charity participatory events</span>
                             <p class="card-text">Organize contests to help those in need.</p>
                         </div>
                     </div>
@@ -297,7 +296,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-10.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Crowdfunding</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='crowdfunding.html'">Crowdfunding</span>
                             <p class="card-text">Set a fundraising goal and start planning.</p>
                         </div>
                     </div>
@@ -310,7 +309,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-11.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Charitable Auctions</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='auction.html'">Charitable Auctions</span>
                             <p class="card-text">Solicit Auction items, Host and Promote.</p>
                         </div>
                     </div>
@@ -323,7 +322,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <img class="card-img" src="./assets/img/services-12.jpg" alt="Card image">
                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                         <div class="service-work-content text-left text-light">
-                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Sales</span>
+                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300" onclick="window.location='sales.html'">Sales</span>
                             <p class="card-text">Define a cause and execute for the good.</p>
                         </div>
                     </div>
@@ -351,7 +350,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <p class="light-300">Get in touch with our team.</p>
                 </div>
                 <div class="col-lg-3 col-12 pt-4">
-                    <a href="#" class="btn btn-primary rounded-pill btn-block shadow px-4 py-2">Go to contacts</a>
+                    <a href="contact.html" class="btn btn-primary rounded-pill btn-block shadow px-4 py-2">Go to contacts</a>
                 </div>
             </div>
         </div>
