--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ https://templatemo.com/tm-561-purple-buzz
             <div class="col-md-12">
                 <ul class="nav d-flex justify-content-center">
                     <li class="nav-item mx-lg-4">
-                        <a class="filter-btn nav-link btn-outline-primary active shadow rounded-pill text-light px-4 light-300" href="#" data-filter=".project">All</a>
+                        <a id = "Explore" class="filter-btn nav-link btn-outline-primary active shadow rounded-pill text-light px-4 light-300" href="#" data-filter=".project">All</a>
                     </li>
                     <li class="nav-item mx-lg-4">
                         <a class="filter-btn nav-link btn-outline-primary rounded-pill text-light px-4 light-300" href="#" data-filter=".corporate">Corporate</a>
@@ -361,7 +361,8 @@ https://templatemo.com/tm-561-purple-buzz
     <section class="py-5 mb-5">
         <div class="container">
             <div class="recent-work-header row text-center pb-5">
-                <h2 class="col-md-6 m-auto h2 semi-bold-600 py-5">Our Features</h2>
+                <h2 id = "Our Features">
+                    <h2 class="col-md-6 m-auto h2 semi-bold-600 py-5">Our Features</h2></h2>
             </div>
             <div class="row gy-5 g-lg-5 mb-4">
 
