--- a/about.html
+++ b/about.html
@@ -54,9 +54,7 @@ https://templatemo.com/tm-561-purple-buzz
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
-                    <a class="nav-link" href="#"><i class='bx bx-bell bx-sm bx-tada-hover text-primary'></i></a>
-                    <a class="nav-link" href="#"><i class='bx bx-cog bx-sm text-primary'></i></a>
-                    <a class="nav-link" href="#"><i class='bx bx-user-circle bx-sm text-primary'></i></a>
+                    <a class="nav-link" href="HTMLPage1.html"><i class='bx bx-user-circle bx-sm text-primary'></i></a>
                 </div>
             </div>
         </div>
@@ -91,7 +89,7 @@ https://templatemo.com/tm-561-purple-buzz
             <div class="col-lg-3">
                 <h2 class="h2 py-5 typo-space-line">Our Team</h2>
                 <p class="text-muted light-300">
-                    Algo Clan is a team of Three, second year BTech students from Indian Institute of Technology, Mandi.
+                    Algo Clan is a team of three, second year BTech students from Indian Institute of Technology, Mandi.
                 </p>
             </div>
 
@@ -132,9 +130,9 @@ https://templatemo.com/tm-561-purple-buzz
                     <img src="./assets/img/work.svg" class="rounded img-fluid" alt="">
                 </div>
                 <div class="banner-content col-lg-7 align-self-end">
-                    <h2 class="h2 pb-3">Why you choose us?</h2>
+                    <h2 class="h2 pb-3">Why choose us?</h2>
                     <p class="text-muted pb-5 light-300">
-                    We here at <strong>Effortless Eventz</strong> provide all kinds of services which include Planning and execution of the event, designing and inviting guests (or) participants 
+                    We here at <strong>Effortless Eventz</strong> provide all kinds of services which include planning and execution of the event, designing and inviting guests (or) participants, 
                     publicising the event and also finding the right partnership and sponsors.</p>
                 </div>
             </div>
@@ -153,7 +151,7 @@ https://templatemo.com/tm-561-purple-buzz
                     </div>
                     <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300">Our Vision</h2>
                     <p class="light-300">
-                        We plan to make the task of Organisers easy by Managing their events.
+                        We plan to make the task of organisers easy by managing their events.
                     </p>
                 </div>
 
@@ -163,7 +161,7 @@ https://templatemo.com/tm-561-purple-buzz
                     </div>
                     <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300">Our Mission</h2>
                     <p class="light-300">
-                        Establish a website to carry out the event organisation and managing tasks.
+                        Establish a website to carry out the event organisation and managing tasks in one place.
                     </p>
                 </div>
 
@@ -173,7 +171,7 @@ https://templatemo.com/tm-561-purple-buzz
                     </div>
                     <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300">Our Values</h2>
                     <p class="light-300">
-                        We firmly believe in connecting with people. Our motive is to make any event Remarkable.
+                        We firmly believe in connecting with people. Our motive is to make any event remarkable.
                     </p>
                 </div>
 
@@ -251,22 +249,22 @@ https://templatemo.com/tm-561-purple-buzz
                     <h2 class="h4 pb-lg-3 text-light light-300">Our Features</h2>
                     <ul class="list-unstyled text-light light-300">
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Planning</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.html#Our Features">Planning</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Public Relation</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.html#Our Features">Public Relation</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Web Marketing</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.html#Our Features">Web Marketing</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Design</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.html#Our Features">Design</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Digital Solution</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.html#Our Features">Digital Solution</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="#">Sponsorship</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="index.html#Our Features">Sponsorship</a>
                         </li>
                     </ul>
                 </div>
