--- a/work-single1.html
+++ b/work-single1.html
@@ -86,7 +86,7 @@ https://templatemo.com/tm-561-purple-buzz
             <div class="worksingle-content col-lg-8 m-auto text-left justify-content-center">
                 <h2 class="worksingle-heading h3 pb-3 light-300 typo-space-line">How to organize an event?</h2>
                 <p class="worksingle-footer py-3 text-muted light-300">
-                    For original post, go to <a href="">Culture Partnership</a>. <br><br>
+                    For original post, go to <a href="https://www.culturepartnership.eu/en/article/10-tips-for-successful-event">Culture Partnership</a>. <br><br>
                     <strong>10 tips to be followed while organising an event: </strong><br><br>
                     1. Define the Purpose and Format.<br> 2. Pay sufficient attention to planning.<br> 
                     3. Draft your budget taking into account unforseeable situations.<br> 4.Be detail oriented.<br> 
