--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@ https://templatemo.com/tm-561-purple-buzz
                     <div class="input-group py-3">
                     
                         <input name="email" type="text" class="form-control form-control-lg rounded-pill rounded-end" id="email" placeholder="Your Email" aria-label="Your Email">
-                        <button class="btn btn-secondary text-white btn-lg rounded-pill rounded-start px-lg-4" href="subscribe.html" type="submit">Subsribe</button>
+                        <button class="btn btn-secondary text-white btn-lg rounded-pill rounded-start px-lg-4" type="button" onclick="window.location='subscribe.html'">Subsribe</button>
                     </div>
                     <p class="text-center light-300">Get informed of our new developmets, works and your progress. We seek to provide our best services.</p>
                     </form>
