--- a/work-single1.html
+++ b/work-single1.html
@@ -285,7 +285,7 @@ https://templatemo.com/tm-561-purple-buzz
 
                     <div class="form-row pt-2">
                         <div class="col-md-12 col-10 text-end">
-                            <button type="submit" class="btn btn-secondary text-white px-md-4 px-2 py-md-3 py-1 radius-0 light-300" onclick="window.location='msg sent.html'">Send Message</button>
+                            <button type="button" class="btn btn-secondary text-white px-md-4 px-2 py-md-3 py-1 radius-0 light-300" onclick="window.location='msg sent.html'">Send Message</button>
                         </div>
                     </div>
                 </form>
